Fix issue with content spacing

--- a/src/pages/subscribe/subscribe.css
+++ b/src/pages/subscribe/subscribe.css
@@ -1,9 +1,12 @@
 @import 'variables.css';
 @import 'colors.css';
 
-.wrap {
-    composes: wrap from 'ui/css/layout.css';
-    composes: inner-wrap from 'ui/css/layout.css';
+.content-wrap {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 .banner {
@@ -34,10 +37,6 @@
 .boxes {
     width: 381px;
     float: left;
-}
-
-.test img, .test a {
-    vertical-align: middle;
 }
 
 .subscribe-basic-stylish-banner {
@@ -218,6 +217,11 @@
     text-align: center;
     color: white;
     width: 280px;
+}
+
+.plan-the-details-row {
+    margin-top: 100px;
+    lost-utility: clearfix;
 }
 
 .plan-td-header {
